// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

// User Attributes Table
Table User {
  id integer [pk, unique, increment]
  userId string [unique, ref: < Activity.userId, ref: < WorkoutPlan.userId, ref: < Exercise.userId, ref: - Profile.userId, ref: < RunPlan.userId ]
  createdAt timestamp [default: 'now()']
  updatedAt timestamp [default: 'now()', note: '@updatedAt']
  email string [unique]
  name string
}

// Profile Model Table
Table Profile {
  profileId string [pk, unique, default: 'uuid()']
  createdAt timestamp [default: 'now()']
  updatedAt timestamp [default: 'now()', note: '@updatedAt']
  BMI integer
  height integer
  heightUnits string [default: "cm"]
  weight integer
  weightUnits string [default: 'kg']
  userId string [unique]
  avatar string [note: "free bucket url"]
}

// Exercises Table
Table Exercise {
  exerciseId string [pk, unique, default: 'uuid()',  ref: <> WorkoutPlan.planId, ref: < Set.exerciseId, ref: - Target.targetId]
  createdAt timestamp [default: 'now()']
  updatedAt timestamp [default: 'now()', note: '@updatedAt']
  name string
  userId string
  description string [note: 'optional']
  url string [note: 'optional youtube link to exercise']
  targetId string 
  unit string
  gymId string [ref: > GymLocation.gymId]
}

Table Target {
  targetId string [pk, unique, default: 'uuid()' ]
  createdAt timestamp [default: 'now()']
  updatedAt timestamp [default: 'now()', note: '@updatedAt']
  targetSets integer
  targetReps integer
  exerciseId string [unique]
  planId string [unique]
}

// Session Table for each workout 'session'
Table Session {
  sessionId string [pk, unique, default: 'uuid()', ref: < Set.sessionId]
  createdAt timestamp [default: 'now()']
  updatedAt timestamp [default: 'now()', note: '@updatedAt']
  duration integer
  exerciseOrder "string[]"
  planId string
  activityId string [unique]
}

// Exercise History Table
Table Set {
  historyId string [pk, unique, default: 'uuid()']
  createdAt timestamp [default: 'now()']
  updatedAt timestamp [default: 'now()', note: '@updatedAt']
  weight integer
  unit string [default: 'kg']
  reps integer
  note string [note: "optional"]
  sessionId string 
  exerciseId string 
}


Table WorkoutPlan {
  planId string [pk, unique, default: 'uuid()', ref: < Session.planId, ref: < Target.planId]
  createdAt timestamp [default: 'now()']
  updatedAt timestamp [default: 'now()', note: '@updatedAt']
  exerciseOrder "string[]"
  name string
  userId string [unique]
  gymLocationId string [unique]
}

Table RunPlan {
  planId string [pk, unique, default: 'uuid()', ref: < RunExercise.planId]
  createdAt timestamp [default: 'now()']
  updatedAt timestamp [default: 'now()', note: '@updatedAt']
  userId string
}

Table RunExercise {
  exerciseId string [pk, unique, default: 'uuid()', ref: < Run.exerciseId]
  createdAt timestamp [default: 'now()']
  updatedAt timestamp [default: 'now()', note: '@updatedAt']
  targetDistance integer
  targetDistanceUnit string [default: 'km']
  isCompleted boolean 
  planId string
  activityId string [unique]
}

Table Run {
  runId string [pk, unique, default: 'uuid()']
  createdAt timestamp [default: 'now()']
  updatedAt timestamp [default: 'now()', note: '@updatedAt']
  duration integer [note: 'milliseconds']
  speed integer 
  speedUnits string [default: 'km']
  speedPerTimeUnit string [default: 'hour']
  actualDistance integer [note: 'optional']
  actualDistanceUnits string [default: 'km']
  exerciseId string
}

Table Activity {
  activityId string [pk, unique, default: 'uuid()', ref: - Session.activityId, ref: - RunExercise.activityId]
  createdAt timestamp [default: 'now()']
  updatedAt timestamp [default: 'now()', note: '@updatedAt']
  userId string 
}

Table GymLocation {
  gymId string [pk, unique, default: 'uuid()', ref: > User.userId, ref: < WorkoutPlan.gymLocationId]
  name string
  description string [note: 'optional']
}





Ref: "WorkoutPlan"."planId" < "WorkoutPlan"."exerciseOrder"